# hop

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.hop  error_pages.hop  flake.nix  idiomorph.js  justfile  manifest.json  package-lock.json  package.json  shell.nix  test.js  tokenizer.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
crates/esbuild-runner/: Cargo.toml
crates/hop-cli/: Cargo.toml
crates/hop-cli/src/: build.rs  fmt.rs  lsp.rs  main.rs
crates/hop-core/: Cargo.toml
crates/hop-core/src/: annotation.rs  asset_error.rs  asset_reference.rs  asset_rewriter.rs  config.rs  css_error.rs  dependency_graph.rs  document.rs  document_annotator.rs  document_id.rs  document_position.rs  error_collection.rs  extract_position.rs  html.rs  itertools.rs  lib.rs  orchestrator.rs  parse_error.rs  program.rs  project.rs  simple_annotation.rs  type_error.rs  variable_scope.rs
crates/hop-core/src/css/: assets.rs  error.rs  mod.rs
crates/hop-core/src/dop/: fake.rs
crates/hop-core/src/dop/parsing/: mod.rs  parse_expr.rs  parse_type.rs  parsed_expr.rs  parsed_type.rs  token.rs  tokenizer.rs
crates/hop-core/src/dop/patterns/: compiler.rs  match.rs
crates/hop-core/src/dop/typing/: join_macro.rs  type.rs  type_checker.rs  typed_expr.rs
crates/hop-core/src/expr/: fake.rs  mod.rs
crates/hop-core/src/expr/parsing/: parse_expr.rs  parse_type.rs  parsed_type.rs  token.rs  tokenizer.rs
crates/hop-core/src/expr/patterns/: compiler.rs  match.rs  mod.rs  typed.rs
crates/hop-core/src/expr/typing/: join_macro.rs  mod.rs  type.rs  type_checker.rs  type_env.rs  type_export.rs  type_registry.rs  type_registry_builder.rs  typed_expr.rs
crates/hop-core/src/hop/: mod.rs
crates/hop-core/src/hop/inlining/: builder.rs  inlined_ast.rs  inlined_node.rs  inliner.rs  mod.rs
crates/hop-core/src/hop/inlining/transform/: doctype_injector.rs  html_structure_injector.rs  link_rewriter.rs  meta_injector.rs  mod.rs  script_injector.rs  tailwind_injector.rs
crates/hop-core/src/hop/parsing/: find_node.rs  formatter.rs  mod.rs  parsed_ast.rs  parsed_node.rs  parser.rs  token.rs  token_tree.rs  tokenizer.rs
crates/hop-core/src/hop/transform/: builder.rs  doctype_injector.rs  html_structure_injector.rs  inliner.rs  link_rewriter.rs  meta_injector.rs  mod.rs  script_injector.rs  tailwind_injector.rs
crates/hop-core/src/hop/typing/: definition_link.rs  mod.rs  type_annotation.rs  type_checker.rs  typed_ast.rs  typed_node.rs
crates/hop-core/src/html/: attributes.rs  element.rs  escape.rs  mod.rs
crates/hop-core/src/ir/: end_to_end_tests.rs  evaluator.rs  integration_tests.rs  mod.rs  optimizer.rs
crates/hop-core/src/ir/runtime/: evaluator.rs  mod.rs  random.rs  value.rs
crates/hop-core/src/ir/semantics/: evaluator.rs
crates/hop-core/src/ir/syntax/: ast.rs  builder.rs  compiler.rs  mod.rs  random.rs  variable_renaming.rs
crates/hop-core/src/ir/syntax/transform/: coalesce_write_statements.rs  eliminate_if_statements.rs  eliminate_match_statements.rs  eliminate_unused_variable_declarations.rs  if_statement_elimination.rs  match_statement_elimination.rs  mod.rs  partial_evaluation.rs  perform_partial_evaluation.rs  simplify_write_exprs.rs  unused_variable_declaration_elimination.rs  variable_renaming.rs  write_coalescing.rs  write_expr_simplification.rs
crates/hop-core/src/ir/transpile/: mod.rs  rust.rs  ts.rs
crates/hop-core/src/symbols/: field_name.rs  mod.rs  module_name.rs  type_name.rs  var_name.rs
crates/tailwind-merge/: Cargo.toml
crates/tailwind-runner/: Cargo.toml  build.rs
crates/tailwind-runner/src/: lib.rs
crates/txtar/: Cargo.toml
cross/: compile.sh
data/: error_404.json  generic_error.json
distribution/pypi/: .gitignore  README.md  build_wheels.sh  pyproject.toml
hop/: error_pages.hop  icons.hop  inspect_pages.hop  inspector.hop  ui.hop
npm/darwin-arm64/: package.json
npm/hop/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
output/: index.html  test.html
pypi/: MANIFEST.in  build_wheels.sh  pyproject.toml
src/: cased_string.rs  common.rs  compiler.rs  config.rs  dop_parser.rs  environment.rs  error_collector.rs  error_formatter.rs  expression_parser.rs  files.rs  formatter.rs  html.rs  log.rs  lsp.rs  main.rs  orchestrator.rs  parse_error.rs  parser.rs  parser_tests.rs  runtime.rs  scriptbuilder.rs  scriptcollector.rs  server.rs  sexpr.rs  test_utils.rs  timing.rs  tokenizer.rs  tokenizer_tests.rs  toposorter.rs  type_error.rs  typechecker.rs  typechecker_tests.rs  unifier.rs
src/cli/: build.rs  compile.rs  dev.rs  fmt.rs  init.rs  lsp.rs  mod.rs
src/commands/: build.rs  dev.rs  lsp.rs  mod.rs
src/decl/: mod.rs  parser.rs  tokenizer.rs
src/document/: document.rs  document_annotator.rs  document_cursor.rs  document_info.rs  document_position.rs  extract_position.rs  mod.rs  position.rs  position_marker.rs  simple_annotation.rs
src/dop/: ast.rs  declaration.rs  dop_token.rs  dop_type.rs  errors.rs  expr.rs  field_name.rs  infer_type_from_json.rs  mod.rs  parse_error.rs  parser.rs  property_name.rs  runtime.rs  syntactic_expr.rs  syntactic_type.rs  syntax_type.rs  token.rs  tokenizer.rs  type.rs  type_checker.rs  type_error.rs  type_name.rs  typechecker.rs  typed_ast.rs  typed_expr.rs  types.rs  unifier.rs  var_name.rs
src/filesystem/: adaptive_watcher.rs  config.rs  files.rs  mod.rs  project.rs  project_root.rs
src/hop/: ast.rs  compiler.rs  component_name.rs  environment.rs  errors.rs  evaluator.rs  inlined_ast.rs  inlined_test_utils.rs  inliner.rs  mod.rs  module_name.rs  node.rs  parse_error.rs  parser.rs  pretty.rs  pretty_print.rs  program.rs  runtime.rs  script_collector.rs  scriptcollector.rs  (+7 more)
test_data/: attribute_empty_values.txtar  attribute_no_space.txtar  attributes_with_special_chars.txtar  comment_with_special_content.txtar  expression_parser.cases  headings.txtar  paragraph.txtar  parser.cases  runtime.cases  svg.txtar  tokenizer.cases  toposorter.cases  typechecker.cases  unicode_emoji.txtar  unifier.cases
tokenizer-visualizer/: Cargo.toml
(+435 files in other folders)
