[package]
name = "hop_rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hop"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-width = "0.1"
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7" }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
notify = "6.1"
tokio-stream = { version = "0.1", features = ["sync"] }
anyhow = "1.0"
colored = "2.0"

[dev-dependencies]
simple_txtar = "1.1.0"
pretty_assertions = "1.4.1"

[lints.clippy]
only_used_in_recursion = "allow"
