[package]
name = "hop_rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hop"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-width = "0.2"
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.8" }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
notify = "8.0"
tokio-stream = { version = "0.1", features = ["sync"] }
anyhow = "1.0"
colored = "3.0"
jsonschema = "0.18"
rayon = "1.8"

[dev-dependencies]
simple_txtar = "1.1.0"
pretty_assertions = "1.4.1"
axum-test = "17.0"
rand = "0.9"

[lints.clippy]
only_used_in_recursion = "allow"
too_many_arguments = "allow"
enum_variant_names = "allow"
manual_is_ascii_check = "allow"
type_complexity = "allow"
