[workspace]
members = [".", "crates/tailwind-merge", "crates/tailwind-runner"]
resolver = "2"

[package]
name = "hop"
version = "0.2.2"
edition = "2024"
publish = false

[[bin]]
name = "hop"
path = "src/main.rs"

[dependencies]
tailwind-merge = { path = "crates/tailwind-merge" }
tailwind-runner = { path = "crates/tailwind-runner" }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
unicode-width = "0.2"
tower-lsp-server = "0.22"
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.8" }
tower-http = { version = "0.6", features = ["fs", "cors"] }
notify = "8.0"
tokio-stream = { version = "0.1", features = ["sync"] }
walkdir = "2.5"
anyhow = "1.0"
colored = "3.0"
rayon = "1.8"
itertools = "0.13"
thiserror = "2.0"
pretty = "0.12"
datafrog = "2.0"
tempfile = "3.8"

[dev-dependencies]
simple_txtar = "1.1.0"
axum-test = "17.0"
rand = "0.9"
expect-test = "1.5"
indoc = "2.0"

[lints.clippy]
too_many_arguments = "allow"
collapsible_if = "allow"
