[package]
name = "tailwind-runner"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["process", "fs"] }
zstd = "0.13"

[build-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
zstd = "0.13"
anyhow = "1.0"
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
