[package]
name = "tailwind-runner"
edition = "2024"
publish = false

[dependencies]
dirs = "6.0"
notify = "8.0"
tempfile = "3.15"
thiserror = "2.0"
tokio = { version = "1.0", features = ["process", "fs", "sync", "rt"] }
zstd = "0.13"

[build-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
zstd = "0.13"
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
